changing passenger files.. but now puppet can't find apache class

--- a/puppet/modules/apache2/files/appvisit.conf
+++ b/puppet/modules/apache2/files/appvisit.conf
@@ -1,6 +1,13 @@
 <VirtualHost *:80>
   ServerName appvisit
-  DocumentRoot "/var/appvisit/current/public/"
+  DocumentRoot /var/appvisit/current/public
   CustomLog /var/log/apache2/appvisit-access_log combined
   ErrorLog /var/log/apache2/appvisit-error_log
+  RailsEnv production
+  PassengerAppRoot /var/appvisit/current
+  PassengerLogLevel 3
+  <Directory /var/appvisit/current/public>
+    Allow from all
+    Options -MultiViews
+  </Directory>
 </VirtualHost>
